# VisualMemorySearch

./: .gitignore  README.md  app.py
.streamlit/: config.toml
Gmail_Inbox_Agent/: .gitignore  README.md  app.py  requirements.txt
Gmail_Inbox_Agent/data/: mock_emails.csv
Gmail_Inbox_Agent/src/: __init__.py  actions.py  clustering.py  config.py  dashboard.py  email_parser.py  gmail_auth.py  gmail_client.py  priority.py
Visual Memory Search/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
Visual Memory Search/config/: settings.example.toml
Visual Memory Search/docs/: architecture.md
Visual Memory Search/src/: __init__.py  analyzer.py  storage.py
Visual Memory Search/src/visual_memory_search/: __init__.py
Visual Memory Search/src/visual_memory_search/core/: __init__.py  models.py
Visual Memory Search/src/visual_memory_search/services/: __init__.py  ingestion.py  search.py
Visual Memory Search/src/visual_memory_search/storage/: __init__.py  paths.py
Visual Memory Search/src/visual_memory_search/ui/: __init__.py  streamlit_app.py
Visual Memory Search/tests/: __init__.py  test_ingestion.py
src/: demo_mode.py  search.py
