[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "visual-memory-search"
version = "0.1.0"
description = "Search personal visual memories from local image collections."
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "pillow",
    "numpy",
    "pydantic",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
